# hpc_modern_cpp

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  example.cpp  main.cpp
eijkhout/: chapter_I.md
minimization/: downhill_simplex.cpp  downhill_simplex.h  downhill_simplex_m.cpp  downhill_simplex_m.h  main.cpp  test_downhill_simplex.cpp
openmp/: openmp.cpp
simd/: SIMD.cpp  SIMD.h  test_SIMD.cpp
